--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         # ccl-bin,ccl32 get stuck in install
         # allegro,ecl fail to install but pass by running tests on sbcl
         # lisp: [sbcl-bin,ccl-bin/1.12,ccl32,allegro,ecl]
-        lisp: [sbcl-bin,ccl-bin/1.12]
+        lisp: [sbcl-bin,ccl-bin/1.12,allegro]
         os: [ubuntu-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
@@ -63,7 +63,7 @@ jobs:
 
     - name: setup cl
       if: steps.cache.outputs.cache-hit != 'true'
-      uses: 40ants/setup-lisp@v2
+      uses: 40ants/setup-lisp@v3
 
     - name: run lisp
       continue-on-error: true
